--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -112,11 +112,11 @@
     <!-- SURVEY PAGE -->
 
     <!-- Nav Bar -->
-    <nav class="navbar fixed-top navbar-dark pink accent-2">
+    <nav class="navbar fixed-top navbar-dark red darken-2">
       <a class="navbar-brand" href="#">
         <img
           style="height: 2rem; width: auto;"
-          src="https://image.flaticon.com/icons/svg/2021/2021729.svg"
+          src="https://image.flaticon.com/icons/svg/2627/2627276.svg"
           alt=""
         />
         LoveBug</a
@@ -490,7 +490,7 @@
               </div>
               <div class="col"></div>
               <div class="col p-3">
-                <button type="submit" class="btn btn-primary" id="submitSurvey">
+                <button type="submit" class="btn btn-red" id="submitSurvey">
                   See Your Match
                 </button>
               </div>
@@ -602,16 +602,16 @@
             <button
               id="all-profiles"
               type="button"
-              class="btn btn-warning"
+              class="btn btn-elegant"
               data-dismiss="modal"
             >
               See All Profiles
             </button>
-            <button type="button" class="btn btn-pink accent-2">
+            <button type="button" class="btn btn-red">
               <img
                 style="height: 1.55rem; width: auto; vertical-align: middle;"
                 class=""
-                src="https://image.flaticon.com/icons/svg/2021/2021729.svg"
+                src="https://image.flaticon.com/icons/svg/2627/2627276.svg"
                 alt=""
               /><span class="align-middle"> Bug Em</span>
             </button>
