updated survey questions and readme file

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -273,190 +273,209 @@
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select"
+                >When at social gatherings, how often do you start conversations
+                with new people?</label
+              >
               <select
                 class="browser-default custom-select mb-4"
                 id="question-0"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Never</option>
+                <option value="2">Rarely</option>
+                <option value="3">Sometimes</option>
+                <option value="4">Frequently</option>
+                <option value="5">Always</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select">How often do you go to clubs or bars?</label>
               <select
                 class="browser-default custom-select mb-4"
                 id="question-1"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Never</option>
+                <option value="2">Rarely</option>
+                <option value="3">Sometimes</option>
+                <option value="4">Frequently</option>
+                <option value="5">Always</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select">How often do you go to a museum</label>
               <select
                 class="browser-default custom-select mb-4"
                 id="question-2"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Never</option>
+                <option value="2">Rarely</option>
+                <option value="3">Sometimes</option>
+                <option value="4">Frequently</option>
+                <option value="5">Always</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select">How often do you go camping?</label>
               <select
                 class="browser-default custom-select mb-4"
                 id="question-3"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Never</option>
+                <option value="2">Rarely</option>
+                <option value="3">Sometimes</option>
+                <option value="4">Frequently</option>
+                <option value="5">Always</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select">How often do you play video games?</label>
               <select
                 class="browser-default custom-select mb-4"
                 id="question-4"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Never</option>
+                <option value="2">Rarely</option>
+                <option value="3">Sometimes</option>
+                <option value="4">Frequently</option>
+                <option value="5">Always</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select">How often do you travel?</label>
               <select
                 class="browser-default custom-select mb-4"
                 id="question-5"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Never</option>
+                <option value="2">Rarely</option>
+                <option value="3">Sometimes</option>
+                <option value="4">Frequently</option>
+                <option value="5">Always</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select">How often do you keep to a schedule?</label>
               <select
                 class="browser-default custom-select mb-4"
                 id="question-6"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Never</option>
+                <option value="2">Rarely</option>
+                <option value="3">Sometimes</option>
+                <option value="4">Frequently</option>
+                <option value="5">Always</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select"
+                >How often do you agree to keep the peace?</label
+              >
               <select
                 class="browser-default custom-select mb-4"
                 id="question-7"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Never</option>
+                <option value="2">Rarely</option>
+                <option value="3">Sometimes</option>
+                <option value="4">Frequently</option>
+                <option value="5">Always</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select"
+                >if you had free time what would you prefer to do?</label
+              >
               <select
                 class="browser-default custom-select mb-4"
                 id="question-8"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Relaxing at home</option>
+                <option value="2">Go shopping</option>
+                <option value="3">Read a book</option>
+                <option value="4">Volunteer at a shelter</option>
+                <option value="5">Play a videogame</option>
               </select>
             </div>
             <!-- Grid row -->
 
             <!-- Grid row Questions -->
             <div class="row">
-              <label for="select">What would you do if you could be you?</label>
+              <label for="select"
+                >whats the most important thing to you in a relationship?</label
+              >
               <select
                 class="browser-default custom-select mb-4"
                 id="question-9"
+                required
               >
                 <option value="" disabled="" selected=""
                   >Choose your option</option
                 >
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-                <option value="4">Option 3</option>
-                <option value="5">Option 3</option>
+                <option value="1">Trust</option>
+                <option value="2">Communication</option>
+                <option value="3">Compromise</option>
+                <option value="4">Just being together</option>
+                <option value="5">Sex</option>
               </select>
             </div>
             <!-- Grid row -->
