finalize default users

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -154,7 +154,9 @@
                 href="/api/profiles"
                 >All Users</a
               >
-              <a class="dropdown-item waves-effect waves-light" href="#"
+              <a
+                class="dropdown-item waves-effect waves-light"
+                href="https://github.com/VIII4/friendFinder"
                 ><i class="fab fa-github"></i> Git Repo</a
               >
             </div>
