--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -144,9 +144,6 @@
               >Profiles</a
             >
           </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect waves-light" href="#">Log In</a>
-          </li>
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle waves-effect waves-light"
@@ -165,10 +162,9 @@
                 href="/api/profiles"
                 >All Users</a
               >
-              <a class="dropdown-item waves-effect waves-light" href="#"
-                >Specific User</a
-              >
-              <a class="dropdown-item waves-effect waves-light" href="#"
+              <a
+                class="dropdown-item waves-effect waves-light"
+                href="https://github.com/VIII4/friendFinder"
                 ><i class="fab fa-github"></i> Git Repo</a
               >
             </div>
